--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,12 @@ add_executable(Main
         src/main.cpp # your main file
         src/CampusCompass.cpp
         src/CampusCompass.h
+        src/Graph.cpp
+        src/Graph.h
+        src/StudentManager.cpp
+        src/StudentManager.h
+        src/CommandProcessor.cpp
+        src/CommandProcessor.h
         # add your own header files below - should be automatically added in CLion
         # example (can also separate with newlines):
         # src/AVL.h src/AVL.cpp
@@ -33,6 +39,12 @@ add_executable(Tests
         test/test.cpp # your test file
         src/CampusCompass.cpp
         src/CampusCompass.h
+        src/Graph.cpp
+        src/Graph.h
+        src/StudentManager.cpp
+        src/StudentManager.h
+        src/CommandProcessor.cpp
+        src/CommandProcessor.h
         # add your own header files below - should be automatically added in CLion
         # example (can also separate with newlines):
         # src/AVL.h src/AVL.cpp
